--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ blogger_url: # your blogger URL
 contact_note: >
   Email is the best way to reach me. Feel free to send me a message if anything interests you!
 
-google_analytics: UA-XXXXXXXXX # out your google-analytics code
+google_analytics: UA-174129382-1 # out your google-analytics code
 
 # -----------------------------------------------------------------------------
 # Blog
