Updates from Fall 2022 semester

--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ collections:
   news:
     defaults:
       layout: post
-    output: true
+    output: false
     permalink: /news/:path/
   projects:
     output: false
