--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: Vinith M. Suriyakumar
-email: vinith@cs.toronto.edu
+email: vinithms@mit.edu
 description: > # this means to ignore newlines until "url:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
